# solana_compressed_memo

./: .gitignore  Cargo.toml  README.md  package.json
docker/: Dockerfile
docker/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
docker/test-ledger/rocksdb/: IDENTITY  LOG  LOG.old.1737548791880104  MANIFEST-000063
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
test-ledger-1398475592/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-9HykJBTh32AXAd92cpiJZhfARyXKC652aMr9yDbpSxZp.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger-1398475592/accounts/run/: 100.0
test-ledger-1398475592/accounts/snapshot/100/: 0.3  11.2  18.1
test-ledger-1398475592/rocksdb/: IDENTITY  LOG  LOG.old.1737892064395609  MANIFEST-000063
test-ledger-1398475592/snapshot/100/: 100  status_cache
test-ledger-1398475592/snapshot/100/accounts_hardlinks/: account_path_0
test-ledger-2922518707/: faucet-keypair.json  genesis.tar.bz2  snapshot-3100-HYXbqeXwyWZWzXhA5BrmMRadoduoyXsa2SunGxGVJi3N.tar.zst  snapshot-3200-H2TxYdXsBrcmFGCrD1qxDX6KRqhyNft3eAfeYgrHdEW7.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger-2922518707/accounts/run/: 0.4  100.0  1000.13  1100.14  1200.15  1300.16  1400.17  1500.18  1600.19  1700.20  1800.21  19.3  1900.22  200.5  2000.23  2100.24  2200.25  2300.26  2400.27  2500.28  2600.29  27.1  2700.30  2800.31  2900.32  300.6  3000.33  3200.35  400.7  500.8  600.9  700.10  800.11  900.12
test-ledger-2922518707/accounts/snapshot/3200/: 26.2  3100.34
test-ledger-2922518707/rocksdb/: IDENTITY  LOG  LOG.old.1737892202356808  MANIFEST-000063
test-ledger-2922518707/snapshot/3200/: 3200  status_cache
test-ledger-2922518707/snapshot/3200/accounts_hardlinks/: account_path_0
test-ledger-4121383506/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-3CgmjfGRrjVNwvMcC9YmPVypBsxjccuEvdQ1wF9WQnQS.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger-4121383506/accounts/run/: 43.2
test-ledger-4121383506/accounts/snapshot/100/: 0.3  100.0  50.1
test-ledger-4121383506/rocksdb/: IDENTITY  LOG  LOG.old.1737891932461575  MANIFEST-000063
test-ledger-4121383506/snapshot/100/: 100  status_cache
test-ledger-4121383506/snapshot/100/accounts_hardlinks/: account_path_0
test-ledger-887003467/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger-887003467/rocksdb/: IDENTITY  LOG  LOG.old.1737892027352374  MANIFEST-000063
tests/: client_test.rs  integration_test.rs
tests/ts/: test_compressed_memo.ts
~/.config/solana/: id.json
